--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.4.1",
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
+    "moment": "^2.22.1",
     "ngx-electron": "^1.0.4",
     "rxjs": "^5.5.8",
     "zone.js": "^0.8.23"
